--- a/index.html
+++ b/index.html
@@ -21,8 +21,21 @@
     </nav>
     </header>
     <main>
+        <h1>Giovanna Alves Silva</h1>
+        <div  class ="maindiv1">
+            <img src="IMG/imagem1.jpeg"  alt="mulher sorrindo com o cabelo de trança na cor vermelha e vestindo uma camiseta preta">
 
+        <div class="cont1">
+        <p> <h3>Nascida em SP, e criada em Embu das artes, desde criança fui orientada que estudar era o caminho certo. Com 9 meses já tive que entrar na creche, e desde então nunca estive fora de uma instituição de ensino, sempre me desafiando em cursos e áreas novas, a começar ainda no ensino médio, que decidi prestar o vestibulinho e ingressar em uma escola técnica, a Etec de Embu das artes, uma referência como ensino técnico dentro do Centro Paula Souza, nesta eu fiz o ensino médio integrado ao técnico em administração de empresas, e foi aí que a visão de mundo, e principalmente carreira, começou a tomar um rumo. </p>
+            <br>
 
+        <p> Ainda no ensino médio, eu não sabia exatamente qual área seguir, minha família sempre me incentivou a seguir a área de tecnologia, mas ela nunca foi minha primeira opção, já que eu não me identificava com as atualizações do mundo tech e meus conhecimentos sobre o mesmo era básico, então decidi evitar frustrações. Portanto, segui na mesma linha e ingressei na graduação de administração. </p>
+        <br>
+        <p> O plot twist veio no quarto semestre da faculdade, quando me senti confortável no curso, pois já conhecia a área e as matérias não me tiravam da caixa, então pensei: por que não me desafiar?
+            No mesmo semestre já me inscrevi no curso técnico de desenvolvimento de sistemas, sem pensar muito, fiz a prova e passei, e foi olhando fixamente para lista de aprovados que a autossabotagem começou, e as perguntas borbulhavam em minha cabeça: será que eu vou gostar? E se eu não for capaz? E se eu não der conta de fazer tudo isso?</p>
+        </h3>   </p>
+        </div>
+    </div>
     </main>
 
 
