adição do collapse no código

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="./CSS/style.css">
     <link rel="icon"  href="https://cdn-icons-png.flaticon.com/512/345/345609.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link rel="stylesheet"  href="./CSS/style.css">
+<script defer src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+   
     <title>PROJETO SEMESTRAL</title>
 </head>
 <body>
@@ -25,7 +30,7 @@
         <div  class ="maindiv1">
             <img src="IMG/imagem1.jpeg"  alt="mulher sorrindo com o cabelo de trança na cor vermelha e vestindo uma camiseta preta">
 
-        <div class="cont1">
+        <div class="texto-descrição">
         <p> <h3>Nascida em SP, e criada em Embu das artes, desde criança fui orientada que estudar era o caminho certo. Com 9 meses já tive que entrar na creche, e desde então nunca estive fora de uma instituição de ensino, sempre me desafiando em cursos e áreas novas, a começar ainda no ensino médio, que decidi prestar o vestibulinho e ingressar em uma escola técnica, a Etec de Embu das artes, uma referência como ensino técnico dentro do Centro Paula Souza, nesta eu fiz o ensino médio integrado ao técnico em administração de empresas, e foi aí que a visão de mundo, e principalmente carreira, começou a tomar um rumo. </p>
             <br>
 
@@ -34,10 +39,49 @@
         <p> O plot twist veio no quarto semestre da faculdade, quando me senti confortável no curso, pois já conhecia a área e as matérias não me tiravam da caixa, então pensei: por que não me desafiar?
             No mesmo semestre já me inscrevi no curso técnico de desenvolvimento de sistemas, sem pensar muito, fiz a prova e passei, e foi olhando fixamente para lista de aprovados que a autossabotagem começou, e as perguntas borbulhavam em minha cabeça: será que eu vou gostar? E se eu não for capaz? E se eu não der conta de fazer tudo isso?</p>
         </h3>   </p>
+        <div class="accordion" id="accordionExample">
+            <div class="card">
+              <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                <h5 class="mb-0">
+                    Carreira acadêmica
+                  </button>
+                </h5>
+              </div>
+          
+              <div id="collapseOne" class="collapse-show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non alemanha 0 x 2 coreia do sul cupidatat skateboard dolor brunch.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <h5 class="mb-0">
+                    Carreira profissional
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <h5 class="mb-0">
+                    Hobbies 
+                </h5>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+              </div>
+            </div>
+          </div>
         </div>
     </div>
     </main>
-
 
     <footer>
 
