inicio do footer

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
     </main>
 
     <footer>
+      <div>
+        <ul>
+          <li>Giovanna Alves Silva</li> 
+          <li>Embu das artes - SP</li>  
+          <li>Copyright</li>
+      </ul>
+      </div>
+      <div class="icons-footer">
+       <a > <img src="./IMG/link.pnf" alt="logo linkedin"></a>
+       <a> <img src="./IMG/github.png" alt="logo GitHub"></a>
+      </div>
 
     </footer>
 </body>
